src/test/deca/context/invalid/Objet/ListDeclClass-PublicField.deca
// Description:
//      Accessing a filed in a non declared class
//
// Results:
//      Line 17 : Rule (3.65) Class non-existent
//
// History:
//      created on 17/1/2022

class A {
    int x;
}

{
    A a = new A();
    int B;
    print(B.x);
}